kubernetes/test/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  namespace: onlysands-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - name: django
          image: andmo22/onlysands-app:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "128Mi"
            limits:
              memory: "512Mi"
          env:
            - name: DJANGO_SECRET_KEY
              valueFrom:
                secretKeyRef:
                  name: django-secret
                  key: DJANGO_SECRET_KEY
            - name: POSTGRES_DB
              valueFrom:
                secretKeyRef:
                  name: postgres-secret
                  key: POSTGRES_DB
            - name: POSTGRES_USER
              valueFrom:
                secretKeyRef:
                  name: postgres-secret
                  key: POSTGRES_USER
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: postgres-secret
                  key: POSTGRES_PASSWORD
            - name: POSTGRES_HOST
              valueFrom:
                secretKeyRef:
                  name: postgres-secret
                  key: POSTGRES_HOST
            - name: SMTP_USER
              valueFrom:
                secretKeyRef:
                  name: email-secret
                  key: SMTP_USER
            - name: SMTP_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: email-secret
                  key: SMTP_PASSWORD
            - name: SMTP_ENDPOINT
              valueFrom:
                secretKeyRef:
                  name: email-secret
                  key: SMTP_ENDPOINT
          volumeMounts:
            - name: static-storage
              mountPath: /app/staticfiles
            - name: media-storage
              mountPath: /app/media
      volumes:
        - name: static-storage
          persistentVolumeClaim:
            claimName: django-pvc
        - name: media-storage
          persistentVolumeClaim:
            claimName: media-pvc
